--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!DOCTYPE HTML>
-<html lang="ja">
+<!--<!DOCTYPE HTML>-->
+<!--<html lang="ja">-->
+---
+layout: default
+---
+
     <head>
         <title>MyWiki</title>
         <meta charset="utf-8">
@@ -33,4 +37,4 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM crossorigin="anonymous"></script>
         <script src="./main.js"></script>
     </body>
-</html>
+<!--</html>-->
