--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         </style>
     </head>
     <body>
-
-        <h1>MyWiki</h1>
         <div id="app">
+        <header><h1>MyWiki</h1></header>
         <nav class="nav flex-column">
             <p>カテゴリーリスト</p>
             <a href="#" v-on:click="filter_data(0,'ALL')" v-cloak>すべて表示</a>
