--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <a v-bind:href="'./'+ wikidata.category +'/'+  wikidata.url + '/index.html'" v-cloak>{{wikidata.url}}</a>
             </div>
         </nav>
+        <article>
+            <h2>記事です</h2>
+        </article>
         </div>
         <script src="https://www.gstatic.com/firebasejs/5.8.5/firebase.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
